--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,12 +144,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Meilleur ordre pour a, ab, abc, abcd"
+    "## Tester des idées"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Meilleur ordre pour a, ab, abc, abcd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -199,12 +206,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Meilleur ordre pour a, ab, abc, abcd, edf, edfh"
+    "### Meilleur ordre pour a, ab, abc, abcd, edf, edfh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -257,6 +264,177 @@
     "res.sort(reverse=True)\n",
     "for r in res[:30]:\n",
     "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Influence du poids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.2 - actes p=2.0 g=4.0 | actuellement p=1.0 g=10.0 | acte p=1.0 g=1.0 | actualité p=1.0 g=5.0\n",
+      "19.2 - actes p=2.0 g=4.0 | actualité p=1.0 g=7.0 | acte p=1.0 g=1.0 | actuellement p=1.0 g=8.0\n",
+      "19.2 - actes p=2.0 g=4.0 | acte p=1.0 g=2.0 | actualité p=1.0 g=6.0 | actuellement p=1.0 g=8.0\n",
+      "19.2 - actes p=2.0 g=4.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0 | acte p=1.0 g=0.0\n",
+      "19.2 - actes p=2.0 g=4.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0 | acte p=1.0 g=0.0\n",
+      "19.2 - actes p=2.0 g=4.0 | acte p=1.0 g=2.0 | actuellement p=1.0 g=9.0 | actualité p=1.0 g=5.0\n",
+      "18.4 - actuellement p=1.0 g=11.0 | actes p=2.0 g=3.0 | actualité p=1.0 g=6.0 | acte p=1.0 g=0.0\n",
+      "18.4 - actuellement p=1.0 g=11.0 | actes p=2.0 g=3.0 | acte p=1.0 g=1.0 | actualité p=1.0 g=5.0\n",
+      "18.4 - actualité p=1.0 g=8.0 | actes p=2.0 g=3.0 | actuellement p=1.0 g=9.0 | acte p=1.0 g=0.0\n",
+      "18.4 - actualité p=1.0 g=8.0 | actes p=2.0 g=3.0 | acte p=1.0 g=1.0 | actuellement p=1.0 g=8.0\n",
+      "18.4 - acte p=1.0 g=3.0 | actes p=2.0 g=3.0 | actuellement p=1.0 g=9.0 | actualité p=1.0 g=5.0\n",
+      "18.4 - acte p=1.0 g=3.0 | actes p=2.0 g=3.0 | actualité p=1.0 g=6.0 | actuellement p=1.0 g=8.0\n",
+      "17.6 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actes p=2.0 g=2.0 | acte p=1.0 g=0.0\n",
+      "17.6 - actuellement p=1.0 g=11.0 | acte p=1.0 g=2.0 | actes p=2.0 g=2.0 | actualité p=1.0 g=5.0\n",
+      "17.6 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actes p=2.0 g=2.0 | acte p=1.0 g=0.0\n",
+      "17.6 - actualité p=1.0 g=8.0 | acte p=1.0 g=2.0 | actes p=2.0 g=2.0 | actuellement p=1.0 g=8.0\n",
+      "17.6 - acte p=1.0 g=3.0 | actuellement p=1.0 g=10.0 | actes p=2.0 g=2.0 | actualité p=1.0 g=5.0\n",
+      "17.6 - acte p=1.0 g=3.0 | actualité p=1.0 g=7.0 | actes p=2.0 g=2.0 | actuellement p=1.0 g=8.0\n",
+      "16.8 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | acte p=1.0 g=1.0 | actes p=2.0 g=1.0\n",
+      "16.8 - actuellement p=1.0 g=11.0 | acte p=1.0 g=2.0 | actualité p=1.0 g=6.0 | actes p=2.0 g=1.0\n",
+      "16.8 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | acte p=1.0 g=1.0 | actes p=2.0 g=1.0\n",
+      "16.8 - actualité p=1.0 g=8.0 | acte p=1.0 g=2.0 | actuellement p=1.0 g=9.0 | actes p=2.0 g=1.0\n",
+      "16.8 - acte p=1.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0 | actes p=2.0 g=1.0\n",
+      "16.8 - acte p=1.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0 | actes p=2.0 g=1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité', 'acte', 'actes']\n",
+    "weights = [1, 1, 1, 2]\n",
+    "total = sum(weights) * 1.0 / len(queries)\n",
+    "res = []\n",
+    "for per in itertools.permutations(zip(queries, weights)):\n",
+    "    trie = CompletionTrieNode.build([(None, w) for w, p in per])\n",
+    "    wks = [(w, p, len(w)-trie.min_keystroke(w)[0]) for w, p in per]\n",
+    "    gain = sum( g*p/total for w, p, g in wks)\n",
+    "    res.append((gain, wks))\n",
+    "res.sort(reverse=True)\n",
+    "for r in res:\n",
+    "    print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Nouvelle métrique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Intuition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def gain_moyen_par_mot(queries, weights):\n",
+    "    total = sum(weights) * 1.0 \n",
+    "    res = []\n",
+    "    for per in itertools.permutations(zip(queries, weights)):\n",
+    "        trie = CompletionTrieNode.build([(None, w) for w, p in per])\n",
+    "        wks = [(w, p, len(w)-trie.min_keystroke(w)[0]) for w, p in per]\n",
+    "        gain = sum( g*p/total for w, p, g in wks)\n",
+    "        res.append((gain, wks))\n",
+    "    res.sort(reverse=True)\n",
+    "    for r in res:\n",
+    "        print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.333 - actu p=1.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "6.333 - actu p=1.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n",
+      "6.333 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=1.0 g=1.0\n",
+      "6.333 - actuellement p=1.0 g=11.0 | actu p=1.0 g=2.0 | actualité p=1.0 g=6.0\n",
+      "6.333 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=1.0 g=1.0\n",
+      "6.333 - actualité p=1.0 g=8.0 | actu p=1.0 g=2.0 | actuellement p=1.0 g=9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "weights = [1, 1, 1]\n",
+    "gain_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=0.0 g=1.0\n",
+      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=0.0 g=1.0\n",
+      "8.5 - actuellement p=1.0 g=11.0 | actu p=0.0 g=2.0 | actualité p=1.0 g=6.0\n",
+      "8.5 - actualité p=1.0 g=8.0 | actu p=0.0 g=2.0 | actuellement p=1.0 g=9.0\n",
+      "8.0 - actu p=0.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "8.0 - actu p=0.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "weights = [1, 1, 0]\n",
+    "gain_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0\n",
+      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité']\n",
+    "weights = [1, 1]\n",
+    "gain_moyen_par_mot(queries, weights)"
    ]
   },
   {
