--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -359,13 +359,16 @@
     "        gain = sum( g*p/total for w, p, g in wks)\n",
     "        res.append((gain, wks))\n",
     "    res.sort(reverse=True)\n",
-    "    for r in res:\n",
-    "        print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))"
+    "    for i, r in enumerate(res):\n",
+    "        print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))\n",
+    "        if i > 10:\n",
+    "            print(\"...\")\n",
+    "            break        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -435,6 +438,141 @@
     "queries = ['actuellement', 'actualité']\n",
     "weights = [1, 1]\n",
     "gain_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Vérification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def gain_dynamique_moyen_par_mot(queries, weights):\n",
+    "    total = sum(weights) * 1.0 \n",
+    "    res = []\n",
+    "    for per in itertools.permutations(zip(queries, weights)):\n",
+    "        trie = CompletionTrieNode.build([(None, w) for w, p in per])\n",
+    "        trie.precompute_stat()\n",
+    "        trie.update_stat_dynamic()\n",
+    "        wks = [(w, p, len(w)-trie.min_dynamic_keystroke(w)[0]) for w, p in per]\n",
+    "        gain = sum( g*p/total for w, p, g in wks)\n",
+    "        res.append((gain, wks))\n",
+    "    res.sort(reverse=True)\n",
+    "    for i, r in enumerate(res):\n",
+    "        print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))\n",
+    "        if i > 10:\n",
+    "            print(\"...\")\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pas de changements : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=0.0 g=1.0\n",
+      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=0.0 g=1.0\n",
+      "8.5 - actuellement p=1.0 g=11.0 | actu p=0.0 g=2.0 | actualité p=1.0 g=6.0\n",
+      "8.5 - actualité p=1.0 g=8.0 | actu p=0.0 g=2.0 | actuellement p=1.0 g=9.0\n",
+      "8.0 - actu p=0.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "8.0 - actu p=0.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "weights = [1, 1, 0]\n",
+    "gain_dynamique_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changements :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.333 - actuel p=1.0 g=5.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=10.0\n",
+      "7.0 - actuellement p=1.0 g=11.0 | actuel p=1.0 g=4.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actuel p=1.0 g=5.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuel p=1.0 g=4.0 | actuellement p=1.0 g=9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['actuellement', 'actualité', 'actuel']\n",
+    "weights = [1, 1, 1]\n",
+    "gain_dynamique_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0 - actuellement p=1.0 g=11.0 | actuel p=1.0 g=4.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actuel p=1.0 g=5.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actuel p=1.0 g=5.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuel p=1.0 g=4.0 | actuellement p=1.0 g=9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gain_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wikipedia\n",
+    "\n",
+    "* [PageCount](https://dumps.wikimedia.org/other/pagecounts-raw/)\n",
+    "* [dump](https://dumps.wikimedia.org/backup-index.html)"
    ]
   },
   {
