--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -451,13 +451,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def gain_dynamique_moyen_par_mot(queries, weights):\n",
+    "def gain_dynamique_moyen_par_mot(queries, weights, permutation=True):\n",
     "    total = sum(weights) * 1.0 \n",
     "    res = []\n",
     "    for per in itertools.permutations(zip(queries, weights)):\n",
@@ -467,6 +467,8 @@
     "        wks = [(w, p, len(w)-trie.min_dynamic_keystroke(w)[0]) for w, p in per]\n",
     "        gain = sum( g*p/total for w, p, g in wks)\n",
     "        res.append((gain, wks))\n",
+    "        if not permutation:\n",
+    "            break\n",
     "    res.sort(reverse=True)\n",
     "    for i, r in enumerate(res):\n",
     "        print(\"{0:3.4} - {1}\".format(r[0], \" | \".join(\"%s p=%1.1f g=%1.1f\" % _ for _ in r[1])))\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -563,6 +565,58 @@
    ],
    "source": [
     "gain_moyen_par_mot(queries, weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ajouter une suggestion complète"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.1 - macérer p=1.0 g=6.0 | maline p=1.0 g=4.0 | machinerie p=1.0 g=7.0 | machinerie infernale p=1.0 g=16.0 | machinerie infernalissime p=1.0 g=20.0 | machine artistique p=1.0 g=12.0 | machine automatique p=1.0 g=12.0 | machine chaplin p=1.0 g=7.0 | machine intelligente p=1.0 g=11.0 | machine learning p=1.0 g=6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['macérer', 'maline', 'machinerie', 'machinerie infernale', 'machinerie infernalissime', \n",
+    "           'machine artistique', 'machine automatique',\n",
+    "           'machine chaplin', 'machine intelligente', 'machine learning']\n",
+    "weights = [1] * len(queries)\n",
+    "gain_dynamique_moyen_par_mot(queries, weights, permutation=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.7 - machine p=0.0 g=6.0 | macérer p=1.0 g=5.0 | maline p=1.0 g=3.0 | machinerie p=1.0 g=8.0 | machinerie infernale p=1.0 g=17.0 | machinerie infernalissime p=1.0 g=21.0 | machine artistique p=1.0 g=13.0 | machine automatique p=1.0 g=13.0 | machine chaplin p=1.0 g=8.0 | machine intelligente p=1.0 g=12.0 | machine learning p=1.0 g=7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = ['machine'] + queries\n",
+    "weights = [1] * len(queries)\n",
+    "weights[queries.index('machine')] = 0.0\n",
+    "gain_dynamique_moyen_par_mot(queries, weights, permutation=False)"
    ]
   },
   {
