--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -481,12 +481,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pas de changements : "
+    "Pas de changement : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +608,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.7 - machine p=0.0 g=6.0 | macérer p=1.0 g=5.0 | maline p=1.0 g=3.0 | machinerie p=1.0 g=8.0 | machinerie infernale p=1.0 g=17.0 | machinerie infernalissime p=1.0 g=21.0 | machine artistique p=1.0 g=13.0 | machine automatique p=1.0 g=13.0 | machine chaplin p=1.0 g=8.0 | machine intelligente p=1.0 g=12.0 | machine learning p=1.0 g=7.0\n"
+      "12.3 - machine p=0.0 g=6.0 | macérer p=1.0 g=5.0 | maline p=1.0 g=3.0 | machinerie p=1.0 g=8.0 | machinerie infernale p=1.0 g=17.0 | machinerie infernalissime p=1.0 g=21.0 | machine artistique p=1.0 g=15.0 | machine automatique p=1.0 g=15.0 | machine chaplin p=1.0 g=11.0 | machine intelligente p=1.0 g=16.0 | machine learning p=1.0 g=12.0\n"
      ]
     }
    ],
