rename suggestion into completion

--- a/_doc/notebooks/nlp/completion_trie_long.ipynb
+++ b/_doc/notebooks/nlp/completion_trie_long.ipynb
@@ -171,7 +171,7 @@
    "outputs": [],
    "source": [
     "from mlstatpy.data.wikipedia import enumerate_titles\n",
-    "list_titles = list(sorted(_ for _ in enumerate_titles(file_titles) if 'A' <= _[0] <= 'Z'))"
+    "list_titles = list(sorted(set(_ for _ in enumerate_titles(file_titles) if 'A' <= _[0] <= 'Z')))"
    ]
   },
   {
@@ -557,7 +557,7 @@
     }
    ],
    "source": [
-    "df2 = benchmark([50000, 100000, 200000, 500000, 500000,, 1000000, 2000000, None])\n",
+    "df2 = benchmark([50000, 100000, 200000, 500000, 500000, 1000000, 2000000, None])\n",
     "df2.tail(n=2)"
    ]
   },
