--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -377,17 +377,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.333 - actu p=1.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
-      "6.333 - actu p=1.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n",
-      "6.333 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=1.0 g=1.0\n",
-      "6.333 - actuellement p=1.0 g=11.0 | actu p=1.0 g=2.0 | actualité p=1.0 g=6.0\n",
-      "6.333 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=1.0 g=1.0\n",
-      "6.333 - actualité p=1.0 g=8.0 | actu p=1.0 g=2.0 | actuellement p=1.0 g=9.0\n"
+      "7.0 - actuellement p=1.0 g=11.0 | actuel p=1.0 g=4.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actuel p=1.0 g=5.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "7.0 - actuel p=1.0 g=5.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actuel p=1.0 g=3.0\n",
+      "7.0 - actualité p=1.0 g=8.0 | actuel p=1.0 g=4.0 | actuellement p=1.0 g=9.0\n"
      ]
     }
    ],
    "source": [
-    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "queries = ['actuellement', 'actualité', 'actuel']\n",
     "weights = [1, 1, 1]\n",
     "gain_moyen_par_mot(queries, weights)"
    ]
@@ -403,17 +403,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=0.0 g=1.0\n",
-      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=0.0 g=1.0\n",
-      "8.5 - actuellement p=1.0 g=11.0 | actu p=0.0 g=2.0 | actualité p=1.0 g=6.0\n",
-      "8.5 - actualité p=1.0 g=8.0 | actu p=0.0 g=2.0 | actuellement p=1.0 g=9.0\n",
-      "8.0 - actu p=0.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
-      "8.0 - actu p=0.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n"
+      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actuel p=0.0 g=3.0\n",
+      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actuel p=0.0 g=3.0\n",
+      "8.5 - actuellement p=1.0 g=11.0 | actuel p=0.0 g=4.0 | actualité p=1.0 g=6.0\n",
+      "8.5 - actualité p=1.0 g=8.0 | actuel p=0.0 g=4.0 | actuellement p=1.0 g=9.0\n",
+      "8.0 - actuel p=0.0 g=5.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
+      "8.0 - actuel p=0.0 g=5.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n"
      ]
     }
    ],
    "source": [
-    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "queries = ['actuellement', 'actualité', 'actuel']\n",
     "weights = [1, 1, 0]\n",
     "gain_moyen_par_mot(queries, weights)"
    ]
@@ -495,17 +495,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actu p=0.0 g=1.0\n",
-      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actu p=0.0 g=1.0\n",
-      "8.5 - actuellement p=1.0 g=11.0 | actu p=0.0 g=2.0 | actualité p=1.0 g=6.0\n",
-      "8.5 - actualité p=1.0 g=8.0 | actu p=0.0 g=2.0 | actuellement p=1.0 g=9.0\n",
-      "8.0 - actu p=0.0 g=3.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n",
-      "8.0 - actu p=0.0 g=3.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=9.0\n"
+      "9.0 - actuellement p=1.0 g=11.0 | actualité p=1.0 g=7.0 | actuel p=0.0 g=3.0\n",
+      "9.0 - actualité p=1.0 g=8.0 | actuellement p=1.0 g=10.0 | actuel p=0.0 g=3.0\n",
+      "8.5 - actuellement p=1.0 g=11.0 | actuel p=0.0 g=4.0 | actualité p=1.0 g=6.0\n",
+      "8.5 - actuel p=0.0 g=5.0 | actualité p=1.0 g=7.0 | actuellement p=1.0 g=10.0\n",
+      "8.5 - actualité p=1.0 g=8.0 | actuel p=0.0 g=4.0 | actuellement p=1.0 g=9.0\n",
+      "8.0 - actuel p=0.0 g=5.0 | actuellement p=1.0 g=10.0 | actualité p=1.0 g=6.0\n"
      ]
     }
    ],
    "source": [
-    "queries = ['actuellement', 'actualité', 'actu']\n",
+    "queries = ['actuellement', 'actualité', 'actuel']\n",
     "weights = [1, 1, 0]\n",
     "gain_dynamique_moyen_par_mot(queries, weights)"
    ]
