update notebooks and completion

--- a/_doc/notebooks/nlp/completion_simple.ipynb
+++ b/_doc/notebooks/nlp/completion_simple.ipynb
@@ -175,7 +175,7 @@
         "ens = CompletionSystem(mots)\n",
         "ens.compute_metrics()\n",
         "for el in ens:\n",
-        "    print(\"n={1} : M'={0} | {2}\".format(el.mks2, el.weight, el.value))"
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
       ]
     },
     {
@@ -194,18 +194,185 @@
             "n=2 : M'=3 | po vert\n",
             "n=3 : M'=4 | po orange\n",
             "n=4 : M'=3 | port rouge\n",
-            "n=5 : M'=4 | port bleu\n",
-            "n=6 : M'=5 | port blanc\n",
+            "n=5 : M'=4 | port blanc\n",
+            "n=6 : M'=5 | port bleu\n",
             "n=7 : M'=3 | port\n"
           ]
         }
       ],
       "source": [
-        "mots_rev = mots[:4] + list(reversed(mots[4:]))\n",
+        "mots_rev = mots.copy()\n",
+        "mots_rev[4], mots_rev[-1] = mots_rev[-1], mots_rev[4]\n",
         "ens = CompletionSystem(mots_rev)\n",
         "ens.compute_metrics()\n",
         "for el in ens:\n",
-        "    print(\"n={1} : M'={0} | {2}\".format(el.mks2, el.weight, el.value))"
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n=0 : M'=1 |  blanc\n",
+            "n=1 : M'=2 |  bleu\n",
+            "n=2 : M'=3 |  rouge\n"
+          ]
+        }
+      ],
+      "source": [
+        "mots_court = [m[4:] for m in mots if m.startswith(\"port\") and len(m) > 4]\n",
+        "ens = CompletionSystem(mots_court)\n",
+        "ens.compute_metrics()\n",
+        "for el in ens:\n",
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n=0 : M'=1 | po\n",
+            "n=1 : M'=2 | po rouge\n",
+            "n=2 : M'=3 | po vert\n",
+            "n=3 : M'=4 | po orange\n",
+            "n=4 : M'=3 | port blanc\n",
+            "n=5 : M'=4 | port bleu\n",
+            "n=6 : M'=5 | port rouge\n"
+          ]
+        }
+      ],
+      "source": [
+        "mots_court = [m for m in mots if m != \"port\"]\n",
+        "ens = CompletionSystem(mots_court)\n",
+        "ens.compute_metrics()\n",
+        "for el in ens:\n",
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n=0 : M'=1 | port\n",
+            "n=1 : M'=2 | port rouge\n",
+            "n=2 : M'=3 | port vert\n",
+            "n=3 : M'=4 | port orange\n",
+            "n=4 : M'=4 | pore\n",
+            "n=5 : M'=4 | pour\n",
+            "n=6 : M'=3 | portes\n",
+            "n=7 : M'=4 | portes blanc\n",
+            "n=8 : M'=5 | portes vert\n",
+            "n=9 : M'=6 | portes orange\n",
+            "n=10 : M'=6 | portes rouge\n",
+            "n=11 : M'=6 | portes noir\n",
+            "n=12 : M'=7 | portes noire\n",
+            "n=13 : M'=5 | portes blanche\n"
+          ]
+        }
+      ],
+      "source": [
+        "couleur = [\"blanc\", \"vert\", \"orange\", \"rouge\", \"noir\", \"noire\", \"blanche\"]\n",
+        "key = \"portes\"\n",
+        "mots = [\"port\", \"port rouge\", \"port vert\", \"port orange\", \"pore\", \"pour\"]\n",
+        "mots.append(key)\n",
+        "mots += [key + \" \" + c for c in couleur]\n",
+        "ens = CompletionSystem(mots)\n",
+        "ens.compute_metrics()\n",
+        "for el in ens:\n",
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n=0 : M'=1 | port\n",
+            "n=1 : M'=2 | port rouge\n",
+            "n=2 : M'=3 | port vert\n",
+            "n=3 : M'=4 | port orange\n",
+            "n=4 : M'=4 | pore\n",
+            "n=5 : M'=4 | pour\n",
+            "n=6 : M'=3 | portes blanc\n",
+            "n=7 : M'=4 | portes vert\n",
+            "n=8 : M'=5 | portes orange\n",
+            "n=9 : M'=6 | portes rouge\n",
+            "n=10 : M'=6 | portes noir\n",
+            "n=11 : M'=7 | portes noire\n",
+            "n=12 : M'=4 | portes blanche\n"
+          ]
+        }
+      ],
+      "source": [
+        "mots2 = [m for m in mots if m != \"portes\"]\n",
+        "ens = CompletionSystem(mots2)\n",
+        "ens.compute_metrics()\n",
+        "for el in ens:\n",
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "n=0 : M'=1 | port\n",
+            "n=1 : M'=2 | portes\n",
+            "n=2 : M'=3 | port rouge\n",
+            "n=3 : M'=4 | port vert\n",
+            "n=4 : M'=4 | port orange\n",
+            "n=5 : M'=4 | pore\n",
+            "n=6 : M'=4 | pour\n",
+            "n=7 : M'=3 | portes blanc\n",
+            "n=8 : M'=4 | portes vert\n",
+            "n=9 : M'=5 | portes orange\n",
+            "n=10 : M'=5 | portes rouge\n",
+            "n=11 : M'=5 | portes noir\n",
+            "n=12 : M'=6 | portes noire\n",
+            "n=13 : M'=4 | portes blanche\n"
+          ]
+        }
+      ],
+      "source": [
+        "mots3 = mots2.copy()\n",
+        "mots3.insert(1, \"portes\")\n",
+        "ens = CompletionSystem(mots3)\n",
+        "ens.compute_metrics()\n",
+        "for el in ens:\n",
+        "    print(\"n={1} : M'={0} | {2}\".format(el.mks1, el.weight, el.value))"
       ]
     },
     {
