update notebook menu

--- a/_doc/notebooks/nlp/completion_profiling.ipynb
+++ b/_doc/notebooks/nlp/completion_profiling.ipynb
@@ -139,7 +139,7 @@
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
         "plt.style.use('ggplot')\n",
-        "from pyquickhelper.ipythonhelper import add_notebook_menu\n",
+        "from jyquickhelper import add_notebook_menu\n",
         "add_notebook_menu()"
       ]
     },
