--- a/_doc/notebooks/metric/roc_example.ipynb
+++ b/_doc/notebooks/metric/roc_example.ipynb
@@ -149,7 +149,7 @@
         }
       ],
       "source": [
-        "from pyquickhelper.ipythonhelper import add_notebook_menu\n",
+        "from jyquickhelper import add_notebook_menu\n",
         "add_notebook_menu()"
       ]
     },
