documentation and updates notebook for galleries

--- a/_doc/notebooks/metric/roc_example.ipynb
+++ b/_doc/notebooks/metric/roc_example.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# ROC"
+        "# ROC\n",
+        "\n",
+        "A few graphs about ROC on the iris datasets."
       ]
     },
     {
