--- a/_doc/notebooks/nlp/completion_trie.ipynb
+++ b/_doc/notebooks/nlp/completion_trie.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Compl\u00e9tion"
+        "# Compl\u00e9tion\n",
+        "\n",
+        "Comparaion de plusieurs algorithmes pour impl\u00e9menter un syst\u00e8me de compl\u00e9tion."
       ]
     },
     {
@@ -655,7 +657,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.0"
+      "version": "3.5.2"
     }
   },
   "nbformat": 4,
