--- a/_doc/notebooks/ml/reseau_neurones.ipynb
+++ b/_doc/notebooks/ml/reseau_neurones.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# R\u00e9seaux de neurones"
+        "# R\u00e9seaux de neurones\n",
+        "\n",
+        "R\u00e9seaux de neurones avec scikit-learn."
       ]
     },
     {
@@ -208,11 +210,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.0"
-    },
-    "widgets": {
-      "state": {},
-      "version": "1.1.2"
+      "version": "3.5.2"
     }
   },
   "nbformat": 4,
