--- a/_doc/notebooks/nlp/completion_profiling.ipynb
+++ b/_doc/notebooks/nlp/completion_profiling.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Completion profiling"
+        "# Completion profiling\n",
+        "\n",
+        "Profiling avec cProfile, memory_profiler, line_profiler, pyinstrument, snakeviz."
       ]
     },
     {
@@ -933,7 +935,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.0"
+      "version": "3.5.2"
     }
   },
   "nbformat": 4,
