--- a/_doc/notebooks/nlp/completion_simple.ipynb
+++ b/_doc/notebooks/nlp/completion_simple.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Compl\u00e9tion Simple"
+        "# Compl\u00e9tion Simple\n",
+        "\n",
+        "Evaluation d'une m\u00e9trique pour un syst\u00e8me de compl\u00e9tion sur quelques cas simples."
       ]
     },
     {
@@ -401,7 +403,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.0"
+      "version": "3.5.2"
     }
   },
   "nbformat": 4,
