--- a/_doc/notebooks/nlp/completion_trie_long.ipynb
+++ b/_doc/notebooks/nlp/completion_trie_long.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Completion Trie and metrics"
+        "# Completion Trie and metrics\n",
+        "\n",
+        "Evaluation of a completion system on wikpedia pages."
       ]
     },
     {
@@ -897,7 +899,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.0"
+      "version": "3.5.2"
     }
   },
   "nbformat": 4,
