--- a/_doc/notebooks/dsgarden/classification_multiple.ipynb
+++ b/_doc/notebooks/dsgarden/classification_multiple.ipynb
@@ -2,7 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "deletable": true,
+        "editable": true
+      },
       "source": [
         "# Classification multiple\n",
         "\n",
@@ -13,7 +16,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": false
+        "collapsed": false,
+        "deletable": true,
+        "editable": true
       },
       "outputs": [
         {
@@ -144,14 +149,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "deletable": true,
+        "editable": true
+      },
       "source": [
         "## D\u00e9but de l'histoire"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "deletable": true,
+        "editable": true
+      },
       "source": [
         "### Confusions\n",
         "\n",
@@ -172,7 +183,10 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "deletable": true,
+        "editable": true
+      },
       "source": [
         "### Clustering\n",
         "\n",
@@ -188,16 +202,20 @@
         "\n",
         "$$f(l) = \\arg \\max_j <C_j,D_l>$$\n",
         "\n",
-        "On continue :\n",
+        "Cela signifie que $\\hat{c_{ij}} = \\sum_l \\mathbb{1}_{j = f(l)} d_{il}$. Si on note $l(i)$ le cluster associ\u00e9 \u00e0 $i$. On continue : $\\hat{c_{ij}} = \\mathbb{1}_{j = f(l(i))}$. On d\u00e9finit l'erreur $e(l)$ l'erreur de classification faite sur chaque cluster $l$ :\n",
         "\n",
-        "$$E = \\sum_{j, l } <C_j.D_l , \\hat{C_{f(l)}}.D_l> \\mathbb{1}_{j\\neq f(l)}$$"
+        "$$e(l) = \\sum_i d_{il}\\sum_j c_{ij} (1-\\mathbb{1}_{j = f(l)}) = \\sum_i d_{il}\\left(\\sum_j c_{ij} -\\sum_j c_{ij}\\mathbb{1}_{j = f(l)}\\right) = \\sum_i d_{il}\\left(1 -c_{i,f(l)}\\right)= \\sum_i d_{il} -\\sum_i d_{il}c_{i,f(l)}$$\n",
+        "\n",
+        "Pour r\u00e9sumer, l'erreur est le nombre d'\u00e9l\u00e9ments moins le nombre d'\u00e9l\u00e9ments dans la classe majoritaire du cluster. Si le nombre de cluster $Q$ devient sup\u00e9rieur au nombre d'observations, cette erreur devient nulle."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": true
+        "collapsed": true,
+        "deletable": true,
+        "editable": true
       },
       "outputs": [],
       "source": []
@@ -206,7 +224,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": true
+        "collapsed": true,
+        "deletable": true,
+        "editable": true
       },
       "outputs": [],
       "source": []
