--- a/_doc/notebooks/dsgarden/discret_gradient.ipynb
+++ b/_doc/notebooks/dsgarden/discret_gradient.ipynb
@@ -494,7 +494,7 @@
         "numpy.hstack([Xext, Yext])\n",
         "df = pandas.DataFrame(numpy.hstack([Xext, Yext]))\n",
         "df.columns = [\"X1\", \"X2\", \"Y0\", \"Y1\", \"Y2\", \"Y'\"]\n",
-        "df.ix[numpy.random.permutation(df.index), :].head(n=10)"
+        "df.iloc[numpy.random.permutation(df.index), :].head(n=10)"
       ]
     },
     {
@@ -801,7 +801,7 @@
         "Xextb, Yextb = multiplie_bruit(X, Y)\n",
         "df = pandas.DataFrame(numpy.hstack([Xextb, Yextb]))\n",
         "df.columns = [\"X1\", \"X2\", \"Y0\", \"Y1\", \"Y2\", \"Y'\"]\n",
-        "df.ix[numpy.random.permutation(df.index), :].head(n=10)"
+        "df.iloc[numpy.random.permutation(df.index), :].head(n=10)"
       ]
     },
     {
