--- a/_doc/notebooks/dsgarden/split_train_test.ipynb
+++ b/_doc/notebooks/dsgarden/split_train_test.ipynb
@@ -1340,7 +1340,7 @@
         "piv[\"sum\"] = piv[0] + piv[1]\n",
         "piv[\"ratio\"] = piv[1] / piv[\"sum\"]\n",
         "print(\"ratio de classe 1 dans l'\u00e9chantillon entier %1.5f\" % \n",
-        "      ((piv.ix[1,1] + piv.ix[0,1]) / (piv.ix[0,1] + piv.ix[0,0] + piv.ix[1,1] + piv.ix[1,0]) ))\n",
+        "      ((piv.iloc[1,1] + piv.iloc[0,1]) / (piv.iloc[0,1] + piv.iloc[0,0] + piv.iloc[1,1] + piv.iloc[1,0]) ))\n",
         "piv"
       ]
     },
@@ -1505,7 +1505,7 @@
         "piv[\"sum\"] = piv[0] + piv[1]\n",
         "piv[\"ratio\"] = piv[1] / piv[\"sum\"]\n",
         "print(\"ratio de classe 1 dans l'\u00e9chantillon entier %1.5f\" % \n",
-        "      ((piv.ix[1,1] + piv.ix[0,1]) / (piv.ix[0,1] + piv.ix[0,0] + piv.ix[1,1] + piv.ix[1,0]) ))\n",
+        "      ((piv.iloc[1,1] + piv.iloc[0,1]) / (piv.iloc[0,1] + piv.iloc[0,0] + piv.iloc[1,1] + piv.iloc[1,0]) ))\n",
         "piv"
       ]
     },
