--- a/_doc/notebooks/metric/roc_example.ipynb
+++ b/_doc/notebooks/metric/roc_example.ipynb
@@ -992,8 +992,8 @@
       ],
       "source": [
         "conf = roc.confusion()\n",
-        "conf[\"P(+<s)\"] = 1 - conf[\"True Positive\"] / conf.ix[len(conf)-1,\"True Positive\"]\n",
-        "conf[\"P(->s)\"] = 1 - conf[\"True Negative\"] / conf.ix[0,\"True Negative\"]\n",
+        "conf[\"P(+<s)\"] = 1 - conf[\"True Positive\"] / conf.loc[len(conf)-1,\"True Positive\"]\n",
+        "conf[\"P(->s)\"] = 1 - conf[\"True Negative\"] / conf.loc[0,\"True Negative\"]\n",
         "conf"
       ]
     },
