--- a/_doc/notebooks/dsgarden/classification_multiple.ipynb
+++ b/_doc/notebooks/dsgarden/classification_multiple.ipynb
@@ -166,7 +166,7 @@
       "source": [
         "### Confusions\n",
         "\n",
-        "Un ds premiers r\u00e9flexes apr\u00e8s avoir appris une classification multi-classe est de regarder la [matrice de confusion](https://fr.wikipedia.org/wiki/Matrice_de_confusion). Certaines classes sont difficiles \u00e0 classer, d'autres non. Je me demandais s'il existait un moyen de d\u00e9terminer cela sans apprendre un classifieur. On souhaite apprendre la classification des points $(X_i, y_i)$, $X_i$ est un vecteur, $y_i$ la classe attendue. Si $\\hat{y_i}$ est la classe pr\u00e9dite, l'erreur de classification est :\n",
+        "Un des premiers r\u00e9flexes apr\u00e8s avoir appris une classification multi-classe est de regarder la [matrice de confusion](https://fr.wikipedia.org/wiki/Matrice_de_confusion). Certaines classes sont difficiles \u00e0 classer, d'autres non. Je me demandais s'il existait un moyen de d\u00e9terminer cela sans apprendre un classifieur. On souhaite apprendre la classification des points $(X_i, y_i)$, $X_i$ est un vecteur, $y_i$ la classe attendue. Si $\\hat{y_i}$ est la classe pr\u00e9dite, l'erreur de classification est :\n",
         "\n",
         "$$E=\\sum_i \\mathbb{1}_{y_i \\neq \\hat{y_i}}$$\n",
         "\n",
