--- a/_doc/notebooks/metric/pvalues_examples.ipynb
+++ b/_doc/notebooks/metric/pvalues_examples.ipynb
@@ -1119,7 +1119,7 @@
       ],
       "source": [
         "from scipy.stats import norm, zipf\n",
-        "from pyensae.pandas_helper import TableFormula\n",
+        "from pyensae.ml_helper import TableFormula\n",
         "import sys\n",
         "\n",
         "\n",
