--- a/_doc/notebooks/dsgarden/classification_multiple.ipynb
+++ b/_doc/notebooks/dsgarden/classification_multiple.ipynb
@@ -2,10 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true
-      },
+      "metadata": {},
       "source": [
         "# Classification multiple\n",
         "\n",
@@ -15,11 +12,7 @@
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {
-        "collapsed": false,
-        "deletable": true,
-        "editable": true
-      },
+      "metadata": {},
       "outputs": [
         {
           "data": {
@@ -28,12 +21,11 @@
               "<script>\n",
               "function repeat_indent_string(n){\n",
               "    var a = \"\" ;\n",
-              "    for ( ; n > 0 ; --n) {\n",
+              "    for ( ; n > 0 ; --n)\n",
               "        a += \"    \";\n",
-              "    }\n",
               "    return a;\n",
               "}\n",
-              "var update_menu_string = function(begin, lfirst, llast, sformat, send, keep_item) {\n",
+              "var update_menu_string = function(begin, lfirst, llast, sformat, send, keep_item, begin_format, end_format) {\n",
               "    var anchors = document.getElementsByClassName(\"section\");\n",
               "    if (anchors.length == 0) {\n",
               "        anchors = document.getElementsByClassName(\"text_cell_render rendered_html\");\n",
@@ -46,9 +38,9 @@
               "    var href;\n",
               "    var tags = [];\n",
               "    var main_item = 0;\n",
-              "    for (i = 0; i <= llast; i++) {\n",
+              "    var format_open = 0;\n",
+              "    for (i = 0; i <= llast; i++)\n",
               "        tags.push(\"h\" + i);\n",
-              "    }\n",
               "\n",
               "    for (i = 0; i < anchors.length; i++) {\n",
               "        text_memo += \"**\" + anchors[i].id + \"--\\n\";\n",
@@ -61,7 +53,7 @@
               "break;\n",
               "            }\n",
               "        }\n",
-              "        if (child == null){\n",
+              "        if (child == null) {\n",
               "            text_memo += \"null\\n\";\n",
               "            continue;\n",
               "        }\n",
@@ -89,15 +81,16 @@
               "            continue ;\n",
               "        }\n",
               "        if (title.endsWith('\u00b6')) {\n",
-              "            title = title.substring(0,title.length-1).replace(\"<\", \"&lt;\").replace(\">\", \"&gt;\").replace(\"&\", \"&amp;\")\n",
+              "            title = title.substring(0,title.length-1).replace(\"<\", \"&lt;\")\n",
+              "         .replace(\">\", \"&gt;\").replace(\"&\", \"&amp;\");\n",
               "        }\n",
-              "\n",
               "        if (title.length == 0) {\n",
               "            continue;\n",
               "        }\n",
               "\n",
               "        while (level < memo_level) {\n",
-              "            text_menu += \"</ul>\\n\";\n",
+              "            text_menu += end_format + \"</ul>\\n\";\n",
+              "            format_open -= 1;\n",
               "            memo_level -= 1;\n",
               "        }\n",
               "        if (level == lfirst) {\n",
@@ -111,22 +104,33 @@
               "            text_menu += \"<ul>\\n\";\n",
               "            memo_level += 1;\n",
               "        }\n",
-              "        text_menu += repeat_indent_string(level-2) + sformat.replace(\"__HREF__\", href).replace(\"__TITLE__\", title);\n",
+              "        text_menu += repeat_indent_string(level-2);\n",
+              "        text_menu += begin_format + sformat.replace(\"__HREF__\", href).replace(\"__TITLE__\", title);\n",
+              "        format_open += 1;\n",
               "    }\n",
               "    while (1 < memo_level) {\n",
-              "        text_menu += \"</ul>\\n\";\n",
+              "        text_menu += end_format + \"</ul>\\n\";\n",
               "        memo_level -= 1;\n",
+              "        format_open -= 1;\n",
               "    }\n",
               "    text_menu += send;\n",
               "    //text_menu += \"\\n\" + text_memo;\n",
+              "\n",
+              "    while (format_open > 0) {\n",
+              "        text_menu += end_format;\n",
+              "        format_open -= 1;\n",
+              "    }\n",
               "    return text_menu;\n",
               "};\n",
               "var update_menu = function() {\n",
               "    var sbegin = \"\";\n",
-              "    var sformat = '<li><a href=\"#__HREF__\">__TITLE__</a></li>';\n",
+              "    var sformat = '<a href=\"#__HREF__\">__TITLE__</a>';\n",
               "    var send = \"\";\n",
+              "    var begin_format = '<li>';\n",
+              "    var end_format = '</li>';\n",
               "    var keep_item = -1;\n",
-              "    var text_menu = update_menu_string(sbegin, 2, 4, sformat, send, keep_item);\n",
+              "    var text_menu = update_menu_string(sbegin, 2, 4, sformat, send, keep_item,\n",
+              "       begin_format, end_format);\n",
               "    var menu = document.getElementById(\"my_id_menu_nb\");\n",
               "    menu.innerHTML=text_menu;\n",
               "};\n",
@@ -149,20 +153,21 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true
-      },
+      "metadata": {},
       "source": [
         "## D\u00e9but de l'histoire"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true
-      },
+      "metadata": {},
+      "source": [
+        "$\\mathbf{1\\!\\!1}_{y_i}$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "### Confusions\n",
         "\n",
@@ -183,10 +188,7 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true
-      },
+      "metadata": {},
       "source": [
         "### Clustering\n",
         "\n",
@@ -206,27 +208,25 @@
         "\n",
         "$$e(l) = \\sum_i d_{il}\\sum_j c_{ij} (1-\\mathbb{1}_{j = f(l)}) = \\sum_i d_{il}\\left(\\sum_j c_{ij} -\\sum_j c_{ij}\\mathbb{1}_{j = f(l)}\\right) = \\sum_i d_{il}\\left(1 -c_{i,f(l)}\\right)= \\sum_i d_{il} -\\sum_i d_{il}c_{i,f(l)}$$\n",
         "\n",
-        "Pour r\u00e9sumer, l'erreur est le nombre d'\u00e9l\u00e9ments moins le nombre d'\u00e9l\u00e9ments dans la classe majoritaire du cluster. Si le nombre de cluster $Q$ devient sup\u00e9rieur au nombre d'observations, cette erreur devient nulle."
+        "Pour r\u00e9sumer, l'erreur est le nombre d'\u00e9l\u00e9ments moins le nombre d'\u00e9l\u00e9ments dans la classe majoritaire du cluster. Si le nombre de clusters $Q$ devient sup\u00e9rieur ou \u00e9gal au nombre d'observations, cette erreur devient nulle."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": true
+      },
+      "source": [
+        "## Mise en pratique\n",
+        "\n",
+        "L'id\u00e9e est de voir comment \u00e9volue cette erreur de classification na\u00efve en fonction du nombre de clusters. La diff\u00e9rence par rapport \u00e0 un classifieur est qu'on sait comment sont fabriqu\u00e9s les clusters et qu'on peut imaginer les classes comme un assmeblage de clusters d'une forme connue."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "collapsed": true,
-        "deletable": true,
-        "editable": true
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "collapsed": true,
-        "deletable": true,
-        "editable": true
+        "collapsed": true
       },
       "outputs": [],
       "source": []
@@ -248,7 +248,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.0"
+      "version": "3.6.4"
     }
   },
   "nbformat": 4,
