update latex, remove new commands

--- a/_doc/notebooks/ml/logreg_voronoi.ipynb
+++ b/_doc/notebooks/ml/logreg_voronoi.ipynb
@@ -599,12 +599,12 @@
         "\n",
         "On applique la formule d\u00e9finie par [R\u00e9gression logistique, diagramme de Vorono\u00ef, k-Means](http://www.xavierdupre.fr/app/mlstatpy/helpsphinx/c_ml/lr_voronoi.html) et on r\u00e9soud le syst\u00e8me lin\u00e9aire d\u00e9fini par :\n",
         "\n",
-        "$$\\newcommand{\\pa}[1]{\\left(#1\\right)} \\newcommand{\\scal}[2]{\\left<#1,#2\\right>} \\newcommand{\\norm}[1]{\\left\\Vert#1\\right\\Vert} \\begin{array}{ll}\n",
-        "&\\left\\{\\begin{array}{l}\\scal{L_i - L_j}{P_i} + B_i - B_j = - \\pa{ \\scal{L_i - L_j}{P_j} + B_i - B_j } \\\\ P_i-  P_j - \\scal{P_i - P_j}{\\frac{L_i-L_j}{\\norm{L_i-L_j}}} \\frac{L_i-L_j}{\\norm{L_i-L_j}}=0 \\end{array} \\right.\n",
+        "$$\\begin{array}{ll}\n",
+        "&\\left\\{\\begin{array}{l}\\left<L_i - L_j, P_i \\right> + B_i - B_j = - \\left\\{ \\left<L_i - L_j, P_j \\right> + B_i - B_j \\right \\} \\\\ P_i-  P_j - \\left<P_i - P_j, \\frac{L_i-L_j}{\\Vert L_i-L_j\\Vert} \\right> \\frac{L_i-L_j}{\\Vert L_i-L_j\\Vert }=0 \\end{array} \\right.\n",
         "\\\\\n",
-        "\\Longleftrightarrow & \\left\\{\\begin{array}{l}\\scal{L_i - L_j}{P_i + P_j} + 2 (B_i - B_j) = 0 \\\\ P_i-  P_j - \\scal{P_i - P_j}{\\frac{L_i-L_j}{\\norm{L_i-L_j}}} \\frac{L_i-L_j}{\\norm{L_i-L_j}}=0 \\end{array} \\right.\n",
+        "\\Longleftrightarrow & \\left\\{\\begin{array}{l}\\left<L_i - L_j, P_i + P_j\\right> + 2 (B_i - B_j) = 0 \\\\ P_i-  P_j - \\left<P_i - P_j, \\frac{L_i-L_j}{\\Vert L_i-L_j \\Vert} \\right> \\frac{L_i-L_j}{\\Vert L_i-L_j\\Vert}=0 \\end{array} \\right.\n",
         "\\\\\n",
-        "\\Longrightarrow & \\left\\{\\begin{array}{l}\\scal{L_i - L_j}{P_i + P_j} + 2 (B_i - B_j) = 0 \\\\ \\scal{P_i-  P_j}{u} - \\scal{P_i - P_j}{\\frac{L_i-L_j}{\\norm{L_i-L_j}}} \\scal{\\frac{L_i-L_j}{\\norm{L_i-L_j}}}{u}=0 \\end{array} \\right.\n",
+        "\\Longrightarrow & \\left\\{\\begin{array}{l} \\left<L_i - L_j, P_i + P_j \\right> + 2 (B_i - B_j) = 0 \\\\ \\left<P_i-  P_j, u \\right> - \\left<P_i - P_j, \\frac{L_i-L_j}{\\Vert L_i-L_j\\Vert} \\right> \\left<\\frac{L_i-L_j}{\\Vert L_i-L_j\\Vert},u \\right>=0 \\end{array} \\right.\n",
         "\\end{array} $$ \n",
         "    \n",
         "O\u00f9 $u$ est un vecteur unit\u00e9 quelconque. On cherche \u00e0 r\u00e9soudre sous la forme d'un syst\u00e8me lin\u00e9aire $LP=B$ o\u00f9 le vecteur $P$ est l'ensemble des coordonn\u00e9es de tous les points cherch\u00e9s. D'apr\u00e8s la page cit\u00e9 ci-dessus, dans le cas d'un diagramme \u00e0 trois classes, ce syst\u00e8me a une infinit\u00e9 de solutions."
