--- a/_doc/notebooks/ml/logreg_voronoi.ipynb
+++ b/_doc/notebooks/ml/logreg_voronoi.ipynb
@@ -782,7 +782,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Le d\u00e9termine est tr\u00e8s faible sugg\u00e9rant que la matrice est non inversible et on sait qu'elle l'est dans ce cas. On remplace la derni\u00e8re \u00e9quation en for\u00e7ant la coordonn\u00e9es d'un point."
+        "Le d\u00e9termine est tr\u00e8s faible sugg\u00e9rant que la matrice est non inversible et on sait qu'elle l'est dans ce cas. On remplace la derni\u00e8re \u00e9quation en for\u00e7ant la coordonn\u00e9e d'un point."
       ]
     },
     {
