--- a/_doc/notebooks/dsgarden/regression_lineaire.ipynb
+++ b/_doc/notebooks/dsgarden/regression_lineaire.ipynb
@@ -1725,7 +1725,7 @@
       "source": [
         "from sklearn.tree import export_graphviz\n",
         "export_graphviz(model, out_file=\"arbre.dot\")\n",
-        "from pyensae.graph_helper import run_dot\n",
+        "from pyensae.graphhelper import run_dot\n",
         "run_dot(\"arbre.dot\", \"arbre.png\")\n",
         "from IPython.display import Image\n",
         "Image(\"arbre.png\")"
