--- a/_doc/notebooks/dsgarden/classification_multiple.ipynb
+++ b/_doc/notebooks/dsgarden/classification_multiple.ipynb
@@ -219,7 +219,7 @@
       "source": [
         "## Mise en pratique\n",
         "\n",
-        "L'id\u00e9e est de voir comment \u00e9volue cette erreur de classification na\u00efve en fonction du nombre de clusters. La diff\u00e9rence par rapport \u00e0 un classifieur est qu'on sait comment sont fabriqu\u00e9s les clusters et qu'on peut imaginer les classes comme un assmeblage de clusters d'une forme connue."
+        "L'id\u00e9e est de voir comment \u00e9volue cette erreur de classification na\u00efve en fonction du nombre de clusters. La diff\u00e9rence par rapport \u00e0 un classifieur est qu'on sait comment sont fabriqu\u00e9s les clusters et qu'on peut imaginer les classes comme un assemblage de clusters d'une forme connue."
       ]
     },
     {
@@ -248,7 +248,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.6.4"
+      "version": "3.7.0"
     }
   },
   "nbformat": 4,
