--- a/_doc/notebooks/dsgarden/regression_lineaire.ipynb
+++ b/_doc/notebooks/dsgarden/regression_lineaire.ipynb
@@ -2170,7 +2170,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Le coefficient $R^2$ est quasiment identique pour un nombre de segments moindre."
+        "Le coefficient $R^2$ est quasiment identique pour un nombre de segments moindre. Je me suis amus\u00e9 \u00e0 rendre ce code plus g\u00e9n\u00e9rique pour comparer la premi\u00e8re \u00e9tape, le d\u00e9coupage en morceaux, via deux mod\u00e8les, un arbre de d\u00e9cision et le nouvel objet [KBinsDiscretizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.KBinsDiscretizer.html) qui segmente une variable sans tenir compte de la cible. La r\u00e9gression n'est plus n\u00e9cessaire lin\u00e9aire : [Piecewise linear regression](http://www.xavierdupre.fr/app/mlinsights/helpsphinx/notebooks/piecewise_linear_regression.html). Je me suis \u00e9galement amus\u00e9 \u00e0 faire de m\u00eame pour une classification par morceaux [PiecewiseClassifier](http://www.xavierdupre.fr/app/mlinsights/helpsphinx/mlinsights/mlmodel/piecewise_estimator.html?mlinsights.mlmodel.piecewise_estimator.PiecewiseClassifier). Celle-ci pose quelques soucis pratiques car toutes les classes ne sont pas forc\u00e9ment repr\u00e9sent\u00e9es dans chaque compartiment..."
       ]
     },
     {
@@ -2197,7 +2197,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.0"
+      "version": "3.7.2"
     }
   },
   "nbformat": 4,
